Sync code that is shared with the editor app (#50)